<resources>
    <string name="app_name">Covid-19</string>
    <string name="world_yesterday">World (Yesterday)</string>
    <string name="world_today">World (Current)</string>
    <string name="india">India</string>
    <string name="total_cases">Total Cases:</string>
    <string name="total_deaths">Total Deaths:</string>
    <string name="total_active">Active Cases:</string>
    <string name="total_recovered">Total Recovered:</string>
    <string name="new_cases">New Cases:</string>
    <string name="new_deaths">New Deaths:</string>
    <string name="active_cases">Active Cases</string>
    <string name="country_state_name">Country:</string>
    <string name="country_timeline_date">Date</string>
    <string name="country_timeline_confirmed">Confirmed</string>
    <string name="country_timeline_deaths">Deaths</string>
    <string name="country_timeline_recovered">Recovered</string>
    <string name="country_timeline_new_cases">New Cases</string>
    <string name="country_timeline_new_deaths">New Deaths</string>
    <string name="new_cases_left">New Cases</string>
    <string name="new_deaths_left">New Deaths</string>
    <string name="new_cases_overall">New Cases</string>
    <string name="new_deaths_overall">New Deaths</string>

    <string name="dark_theme">Dark Theme</string>
    <string name="light_theme">Light Theme</string>
    <string name="custom_theme">Custom Theme</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab1Heading">Timeline</string>
    <string name="tab2Heading">District Data</string>
    <string name="aboutText">About</string>
</resources>


