<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/parent_layout_list_item"
        android:orientation="vertical">

        <TextView
            android:id="@+id/country_state_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:autoSizeMaxTextSize="19sp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:padding="8dp"
            android:text="@string/country_state_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22sp"
            android:textStyle="italic|bold" />

        <TextView
            android:id="@+id/total_cases_item_left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingLeft="8dp"
            android:text="@string/total_cases"
            android:textColor="#000" />

        <TextView
            android:id="@+id/total_deaths_item_left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingLeft="8dp"
            android:text="@string/total_deaths"
            android:textColor="#F00" />

        <TextView
            android:id="@+id/total_recovered_item_left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingLeft="8dp"
            android:text="@string/total_recovered"
            android:textColor="#018786" />

        <TextView
            android:id="@+id/new_cases_item_left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingLeft="8dp"
            android:text="@string/new_cases_left"
            android:textColor="#000" />

        <TextView
            android:id="@+id/new_deaths_item_left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingLeft="8dp"
            android:text="@string/new_deaths_left"
            android:textColor="#F00" />

        <TextView
            android:id="@+id/total_active_item_left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingLeft="8dp"
            android:text="@string/total_active" />

    </LinearLayout>

</LinearLayout>