<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:id="@+id/country_timeline_date_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/country_timeline_date"
            android:layout_weight="13.5"
            android:textStyle="bold"
            android:autoSizeMaxTextSize="12sp"
            android:autoSizeMinTextSize="6sp"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:padding="5dp"/>

        <View
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:background="@color/cardview_dark_background" />

        <TextView
            android:id="@+id/country_timeline_confirmed_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="18"
            android:text="@string/country_timeline_confirmed"
            android:textStyle="bold"
            android:autoSizeMaxTextSize="12sp"
            android:autoSizeMinTextSize="6sp"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:padding="5dp"/>

        <View
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:background="@color/cardview_dark_background" />

        <TextView
            android:id="@+id/country_timeline_deaths_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="18"
            android:text="@string/country_timeline_deaths"
            android:textStyle="bold"
            android:autoSizeMaxTextSize="12sp"
            android:autoSizeMinTextSize="6sp"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:padding="5dp"/>

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@color/cardview_dark_background" />

        <TextView
            android:id="@+id/country_timeline_recovered_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="18"
            android:text="@string/country_timeline_recovered"
            android:textStyle="bold"
            android:autoSizeMaxTextSize="12sp"
            android:autoSizeMinTextSize="6sp"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:padding="5dp"/>

        <View
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:background="@color/cardview_dark_background" />

        <TextView
            android:id="@+id/country_timeline_new_cases_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="16"
            android:text="@string/country_timeline_new_cases"
            android:textStyle="bold"
            android:autoSizeMaxTextSize="12sp"
            android:autoSizeMinTextSize="6sp"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:padding="5dp"/>

        <View
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:background="@color/cardview_dark_background" />

        <TextView
            android:id="@+id/country_timeline_new_deaths_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/country_timeline_new_deaths"
            android:layout_weight="16"
            android:textStyle="bold"
            android:autoSizeMaxTextSize="12sp"
            android:autoSizeMinTextSize="6sp"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:padding="5dp"/>

    </LinearLayout>

</LinearLayout>